--- a/src/Components/TeacherOwnProfile/TeacherOwnProfile.css
+++ b/src/Components/TeacherOwnProfile/TeacherOwnProfile.css
@@ -267,3 +267,25 @@ td.editing_cell{
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.136);
 }
+.profile-btn {
+    background-color: #00d5ff;
+    color: #222;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 28px;
+    margin: 5px 8px 12px 0;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.15s;
+    box-shadow: 0 2px 10px #0ff7c82a;
+    text-decoration: none;
+    display: inline-block;
+}
+.profile-btn:hover {
+    background-color: #00ff80;
+    color: #000;
+    box-shadow: 0 4px 16px #00ff8058;
+    transform: translateY(-2px) scale(1.03);
+    text-decoration: none;
+}
